# LEti_Engine

./: .gitignore  CMakeLists.txt  Debug.cpp  Debug.h  LEti_Engine.pro  main.cpp
.old_stuff/: Debug_Drawable_Frame.cpp  Debug_Drawable_Frame.h  EIPF.h  Tree.cpp
OpenGL/: stb_image.h
TODO/: Critical.txt  Major.txt  Minor.txt  Trivial.txt
TODO/Need to do/: Broad-phase collision detection.txt  Math stuff  Middle-phase collision detection.txt  (+1 more)
include/: Buffer.h  Camera.h  Camera_2D.h  Camera_Base.h  Colors.h  Data_Provider.h  Debug.h  Debug_Drawable_Frame.h  EIPF.h  Event_Controller.h  FPS_Timer.h  LEti_Registration.h  Math.h  Math_Stuff.h  Message_Translator.h  Module.h  Object.h  Physical_Model.h  Physical_Model_2D.h  Physical_Model_3D.h  Physical_Model_Interface.h  Picture.h  Picture_Manager.h  Renderer.h  Resource_Loader.h  Resources_Manager.h  Shader.h  Space_Splitter_2D.h  Space_Splitter_2D_SPH.h  Text_Field.h  Texture.h  Timer.h  Transformation_Data.h  Tree.h  Utility.h  Vertices.h  Weak_Module_Holder.h  Window_Controller.h
old_stuff/: Camera.cpp  Camera.h
resources/: fragment_shader.shader  vertex_shader.shader
source/: Buffer.cpp  Camera.cpp  Camera_2D.cpp  Camera_Base.cpp  Colors.cpp  Data_Provider.cpp  Debug_Drawable_Frame.cpp  EIPF.cpp  Event_Controller.cpp  FPS_Timer.cpp  LEti_Registration.cpp  Math.cpp  Math_Stuff.cpp  Module.cpp  Object.cpp  Physical_Model.cpp  Physical_Model_2D.cpp  Physical_Model_3D.cpp  Physical_Model_Interface.cpp  Picture.cpp  Picture_Manager.cpp  Renderer.cpp  Resource_Loader.cpp  Resources_Manager.cpp  Shader.cpp  Space_Splitter_2D.cpp  Space_Splitter_2D_SPH.cpp  Text_Field.cpp  Texture.cpp  Timer.cpp  Transformation_Data.cpp  Utility.cpp  Vertices.cpp  Weak_Module_Holder.cpp  Window_Controller.cpp
utilities/: font_data.txt
(+79 files in other folders)
